--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <title>Tea Cozy</title>
     <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;400;700&display=swap" rel="stylesheet">
+  
 </head>
 <body>
 
@@ -27,7 +27,7 @@
      </div>
 
    <!-- Mission here -->
-  <div class="bannersection">
+  <div class="bannersection" id="mission>
     <div class="banner">
        <div class="banner-text">
          <h2>Our Mission</h2>
@@ -37,7 +37,7 @@
   </div>
 
     <!-- TOTM here -->
-      <div class="totmsection">  
+      <div class="totmsection" id="featuredteas">  
                 <div class="totm-text"> 
                   <h2>Tea of the Month</h2>
                   <h4>What's Steeping at The Tea Cozy?</h4>
@@ -71,7 +71,7 @@
        </div>
        
     <!-- Locations here -->
-        <div class="locationsection">
+        <div class="locationsection" id="location">
             <div class="locationbanner">
             <div class="location-text">
                 <h2>Locations</h2>
