--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      </div>
 
    <!-- Mission here -->
-  <div class="bannersection" id="mission>
+  <div class="bannersection" id="mission">
     <div class="banner">
        <div class="banner-text">
          <h2>Our Mission</h2>
